src/test/ui/consts/qualif_overwrite_2.stderr
error[E0492]: this borrow to an interior mutable value may end up in the final value of this constant
  --> $DIR/qualif_overwrite_2.rs:8:5
   |
LL |     &{a.0}
   |     ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
